turtleart.lessons.turtleart.Main.HouseThree.scala.error
Source:26: error: ')' expected but ';' found.
allerVers(setX+50;setY)
                 ^Source:26: error: ';' expected but ')' found.
allerVers(setX+50;setY)
                      ^